Fixed an issue where images were stretching rather than clipping content to the right size. Fixed about me image not being optimised for smaller screens

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -26,6 +26,11 @@
   font-size: 3rem;
 }
 
+.image {
+  object-fit: cover;
+  min-height: 100%;
+}
+
 .gradientGridAlign {
   display: grid;
   align-items: center;
